<resources>
    <string name="app_name">Martin Brnak-Temperature_Converter</string>
    <string name="celsiusText">Celsius</string>
    <string name="fahrenheitText">Fahrenheit</string>
    <string name="celsiusValue">0</string>
    <string name="fahrenheitValue">32</string>
    <string name="interestingMessage">placeholder for interesting message</string>
    <string name="interestingMessageCold">I wish it were warmer</string>
    <string name="interestingMessageHot">I wish it were colder</string>

</resources>